# data_structure_and_algos

algos/divide_and_conquer/: Binary search practice.ipynb  Binary search practice.py  First and last index.ipynb  First and last index.py  Kth Largest Element.ipynb  Kth Largest Element.py  Maximum Sum Sub-Array.ipynb  Maximum Sum Sub-Array.py  binary_search_variations.ipynb  binary_search_variations.py  divide_and_conquer.md  search_in_a_rotated_array_prob.md  search_in_a_rotated_array_sol.md  search_in_a_rotated_array_sol.py  square_root_of_an_integer_prob.md  square_root_of_an_integer_sol.md  square_root_of_an_integer_sol.py
algos/dynamic_programing/: Coin Change.ipynb  Coin Change.py  Longest Palindromic Sequence.ipynb  Longest Palindromic Sequence.py  Stock Prices.py  dynamic_programming.md  knapsack_problem.hpp  knapsack_problem.ipynb  knapsack_problem.py  longest_common_sequence.hpp  longest_common_subsequence.ipynb  longest_common_subsequence.py
algos/graph_algorithms/: BFS.ipynb  BFS.py  DFS_iterative.ipynb  DFS_iterative.py  DFS_recursion.ipynb  DFS_recursion.py  connecting-Islands.ipynb  connecting-Islands.py  dijkstra.ipynb  dijkstra.py  graph_algorithms.md  paths_with_cost.py
algos/greedy_algorithms/: A_star.py  Dijkstra.hpp  Dijkstras_Shortest_Path_Algorithm.ipynb  Dijkstras_Shortest_Path_Algorithm.py  Min_Operations.ipynb  Min_Operations.py  min_platforms.py  (+6 more)
async_parallel/: threads.cc
design_patterns/: semi_static_with_strategy_pattern.txt
design_patterns/preset/: CMakeLists.txt  configurations.h  image_processing_parameters.h  main.cpp  preset.h
(+526 files in other folders)
